# include-fix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  wali-afs.h  xmake.lua
apt-filesearch/: README.md  a.out  afs.cpp  afs.h  conf.cpp  conf.h  wali.conf
apt-filesearch/sfic/: README.md  main.cpp
apt-filesearch/v2/: config.h
dpkg-s/: compile.txt  libtool  querycmd.c  readme.md
example/: wali-afs-demo.cpp
libpackagekit++/: Readme.md  main.cpp
libpackagekit++/src/: PackageKit.cpp  PackageKit.h
src/: CMakeLists.txt  WaliPkgCmd.cpp  wali-afs.cpp  wali-dpkgs.cpp  wali-dpkgs.h
